# WSAOnWin10

./: .gitignore  README.md  README.zh-CN.md  builds.json  builds.md  releases.json
.github/ISSUE_TEMPLATE/: CustomBuild.yml  UploadDll.yml  bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: CheckUpdate.yml  CustomBuild.yml  DllInject.yml  DownloadDll.yml  Issues.yml  Release.yml  Sync.yml  WSAPatch.yml  WSAPatch_arm64.yml  WSAPatch_x64  WSAPatch_x64.yml
installer/: Install.ps1  MakePri.ps1
original_dll/arm64/22621/: info.txt
original_dll/arm64/23481/: info.txt
original_dll/arm64/25393/: info.txt
original_dll/x64/22621/: info.txt
original_dll/x64/22631/: info.txt
original_dll/x64/23481/: info.txt
original_dll/x64/25393/: info.txt
original_dll/x64/25905/: info.txt
original_dll/x64/25987/: info.txt
scripts/: BuildHistory.py  BuildInfo.py  CheckBuilds.py  DownloadDll.py  DownloadDll_vhdx.py  DownloadDll_zip.py  Issues.py  ReleaseBody.py  ReleaseFile.py  generate_release.py  get_artifact_name.py  run.sh
scripts/DllInject/: CMakeLists.txt  DllInject.sln
scripts/DllInject/DllInject/: CMakeLists.txt  DllInject.cpp  DllInject.vcxproj  DllInject.vcxproj.filters  Image.cpp  Image.h
